another fix for ie9 shifting (view page). A lot of these fixes have to do with margins or some defined height, since IE9 for some reason repositions or rerenders certain element heights on the page when you hover over certain objects
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@3022 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -202,7 +202,7 @@ option {font-size:11px;}
 .AutoSaveStatus {font-weight: bold;float:right;padding:6px 0 0;}
 
 /*Record Panel layout*/
-.RecordBox {margin: 0px 15px 15px 0px;}
+.RecordBox {margin: 15px 15px 15px 0px;}
 .RecordPanel {padding: 6px 6px 16px;}
 .RecordPanel .RecordHeader {}
 .RecordPanel h1 {}
